# google-stb.platform.vendor.broadcom.bcm_platform

./: .gitignore  Android.bp  Android.mk  device-hals.mk  device-media.mk  device-nexus.mk  device-v3d.mk  device-vendor.mk
3pip/: Android.mk
3pip/b_dtcp_ip/: Android.mk
apks/BcmAdjustScreenOffset/: Android.mk  AndroidManifest.xml
apks/BcmBP3Config/: Android.mk  AndroidManifest.xml
apks/BcmCustomizer/: Android.mk  AndroidManifest.xml  generate-backup-banners.sh
apks/BcmFwksDevRro/: Android.mk
apks/BcmFwksRro/: Android.mk  AndroidManifest.xml
apks/BcmHdmiTvInput/: Android.mk  AndroidManifest.xml
apks/BcmKeyInterceptor/: Android.mk  AndroidManifest.xml
apks/BcmNrdpHelper/: Android.mk  AndroidManifest.xml
apks/BcmOtaUpdater/: Android.mk  AndroidManifest.xml
apks/BcmSidebandViewer/: Android.mk  AndroidManifest.xml
apks/BcmSpdifSetting/: Android.mk  AndroidManifest.xml
apks/BcmSplash/: Android.mk  AndroidManifest.xml
apks/BcmTVInput/: Android.mk  AndroidManifest.xml
apks/BcmTvSettingsLauncher/: Android.mk  README
apks/BcmUriPlayer/: AndroidManifest.xml
apks/PAICfgStub/: Android.mk  build_apk.mk
app/BcmAdjustScreenOffset/: Android.mk
app/BcmCoverFlow/: Android.mk  AndroidManifest.xml
app/BcmHdmiTvInput/: Android.mk  AndroidManifest.xml
app/BcmOtaUpdater/: Android.mk  AndroidManifest.xml
app/BcmSidebandViewer/: AndroidManifest.xml
app/BcmTVInput/: AndroidManifest.xml
app/BcmTvSettingsLauncher/: Android.mk  AndroidManifest.xml
app/BcmUriPlayer/: Android.mk  AndroidManifest.xml
app/LeanbackBcmCustom/: Android.mk
bcm_platform/: Android.mk  device-vendor.mk
bcm_platform/brcm_audio/: Android.mk  AudioHardwareInput.cpp  BrcmAudioPolicyManager.cpp  BrcmAudioPolicyManager.h  StandbyMonitorThread.cpp  audio_hal_thunks.cpp  brcm_audio.cpp  brcm_audio.h  brcm_audio_builtin.cpp  brcm_audio_dummy.cpp  brcm_audio_nexus.cpp  brcm_audio_nexus_direct.cpp
bcm_platform/brcm_btuart/: bt_vendor.conf
bcm_platform/brcm_btusb/: Android.mk  Readme.txt  bt_vendor.conf  init.brcm_bt.rc
bcm_platform/ntfs3g/libntfs-3g/: Makefile  Makefile.am  misc.c  unix_io.c
bcm_platform/ntfs3g/src/: Makefile  Makefile.am  ntfs-3g.c
brcm_audio/: Android.mk  BrcmAudioPolicyManager.h  StandbyMonitorThread.cpp  brcm_audio.cpp  brcm_audio.h  brcm_audio_builtin.cpp  brcm_audio_nexus.cpp  brcm_audio_nexus_direct.cpp
brcm_btusb/: Android.mk
brcm_dhd/: init.brcm_dhd.rc
brcm_dtvkit/: Android.mk
cfgs/: fstab.ab-update  fstab.broadcomstb  fstab.squashfs  fstab.squashfs.ab-update  fstab.verity  fstab.verity.squashfs  fstab.verity.squashfs.ab-update  init.blemmyes.rc  init.blockdev.rc  init.brcm_bt.rc  init.broadcomstb.fs.rc  init.broadcomstb.fs_verity.rc  init.broadcomstb.rc  init.broadcomstb.usb.configfs.rc  init.broadcomstb.usb.rc  init.eth.rc  init.nx.dynheap.rc
common/containers/test/: CMakeLists.txt  datagram_receiver.c  datagram_sender.c  dump_pktfile.c  nb_io.h  nb_io_unix.c  nb_io_win32.c  rtp_decoder.c  stream_client.c  stream_server.c  test.c  test_bits.c  test_uri.c  uri_pipe.c
hals/: current.txt
hdmi_cec/: Android.mk  nexus_hdmi_cec.cpp  nexus_hdmi_cec.h
libb_os/: Android.mk
libb_playback_ip/: Android.mk
libbcmsideband/: Android.mk  bcmsideband.cpp
libbcmsidebandplayer/: Android.mk  bcmsidebandfileplayer.cpp  bcmsidebandfileplayer.h  bcmsidebandhdmiplayer.cpp  bcmsidebandhdmiplayer.h  bcmsidebandplayer.cpp  bcmsidebandplayerfactory.cpp
libcamera2/: CameraFactory.cpp  CameraHardware.cpp  Utils.cpp
libgralloc/: Android.mk  framebuffer.cpp  gralloc.cpp  gralloc_destripe.cpp  gralloc_priv.h
libhwcomposer/: Android.mk  hwcomposer.cpp
liblights/: Android.mk  lights.cpp
libnexusipc/: Android.mk  INexusDisplaySettingsChangedEventListener.cpp  INexusHdmiCecMessageEventListener.h  nexus_ipc_client.cpp  nexus_ipc_client.h  nexus_ipc_client_base.h  nexus_ipc_client_factory.h  nexus_ipc_common.h  nexus_ipc_priv.h  nexus_nx_client.cpp  nexus_nx_client.h
libnexusir/: Android.mk  linuxuinput.cpp  linuxuinput.h  nexusirhandler.cpp  nexusirinput.cpp  nexusirinput.h
libnexusservice/: Android.mk  nexus_cec.h  nexus_interface.h  nexuscecservice.h  nexusnxcecservice.cpp  nexusnxservice.cpp  nexusservice.cpp  nexusservice.h  nexusservice_base.h
libpower/: Android.mk  nexus_gpio.h  nexus_gpio_stubs.cpp  nexus_power.cpp  nexus_power.h  power.cpp
libstagefright_bcm/: Android.mk  MPEG4Extractor.cpp  hevc_utils.cpp
libstagefrighthw/: Android.mk  bomx_aac_parser.cpp  bomx_audio_decoder.cpp  bomx_audio_decoder.h  bomx_buffer.cpp  bomx_component.cpp  bomx_component.h  bomx_hwcbinder.h  bomx_pes_formatter.cpp  bomx_port.cpp  bomx_utils.cpp  bomx_video_decoder.cpp  bomx_video_decoder.h  bomx_video_decoder_secure.cpp  bomx_video_decoder_secure.h  bomx_video_decoder_stats.h  bomx_video_encoder.cpp  bomx_video_encoder.h  bomx_vp9_parser.h
libtv_input/: Android.mk  hdmi_tv_input.cpp  tv_input.cpp
netcoal/: ethcoal.c
nxdispfmt/: Android.mk  nxdispfmt.c
nxif/: nexus_export_file.txt
nxlogger/: Android.mk  nxlogger.cpp
nxmini/: Android.mk  nxmini.cpp  nxmini.h
nxproxyif/: nexus_platform_proxy_intf.c
nxserver/: Android.mk  nxserver.cpp  nxserver.h
nxsocket/: nxclient_android_socket.c
pmlibservice/: Android.mk  IPmLibService.h  PmLibService.cpp  PmLibService.h
prebuilt/: cache.sh  fstab.broadcomstb  fstab.broadcomstb_nfs  init.blockdev.rc  init.broadcomstb.rc  init.broadcomstb.usb.rc  init.broadcomstb.usb.tcp.rc  init.eth.rc  init.nfs.rc  init.nx.dynheap.rc  init.redux.rc  qwerty.kl  static_ip.sh  ueventd.bcm_platform.rc  ws_home.html
prop/: audio_props.h  drm_props.h  gralloc_props.h  hdmicec_props.h  hwcomposer_props.h  keymaster_props.h  media_props.h  nexus_props.h  others_props.h  power_props.h  vendor_bcm_props.h
signing/: README  bcmstb.jks  bcmstb.pk8  bcmstb.x509.pem  media.pk8  media.x509.pem  platform.pk8  platform.x509.pem  shared.pk8  shared.x509.pem  testkey.pk8  testkey.x509.pem  verity.key.pub  verity.pk8  verity.x509.pem  verity_dev_key.der.x509
tools/: kernel-toolchain  plat-droid.py  sec_builder.sh  seclibs.map
(+1526 files in other folders)
